crates/keron-lang/tests/corpus/errors/parse/use_decl_empty_names.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: unexpected end of input, expected identifier
  --> 2:1
  |
2 | 
  | ^
